# Operation-Systems

./: .gitignore
lab1/: .gitignore  CMakeLists.txt  Creator.cpp  Employee.h  Main.cpp  Reporter.cpp  TestRunner.cpp
lab2/: lab_functions.h  main.cpp
lab2/NoWinAPI/: CMakeLists.txt  globals.cpp  globals.h  lab_functions.cpp  lab_functions.h  main.cpp
lab2/NoWinAPI/tests/: tests_lab2.cpp
lab2/WinAPI/: CMakeLists.txt  lab_functions.cpp
lab2/tests/: tests_lab2.cpp
